fix: update loop with duplicate domain key.

--- a/tasks/01-upload-certificate.yaml
+++ b/tasks/01-upload-certificate.yaml
@@ -11,6 +11,6 @@
     password: ""
     hsm: ""
   changed_when: false
-  loop: "{{ fortiweb_certificates }}"
+  loop: "{{ fortiweb_certificates | unique(attribute='domain') }}"
   loop_control:
     label: "{{ item.domain }}"
